fixbug: scrollbar

--- a/src/components/PageTemplate/Popup/index.less
+++ b/src/components/PageTemplate/Popup/index.less
@@ -6,7 +6,7 @@
 
   width: 100%;
   height: 100vh;
-  overflow: hidden auto;
+  overflow: hidden;
   cursor: not-allowed;
   pointer-events: none;
   opacity: 0;
@@ -85,6 +85,7 @@
     .content-wrap__content {
       width: 100%;
       height: calc(100% - 2.5rem);
+      overflow: hidden auto;
     }
   }
 }
